cmake_minimum_required(VERSION 3.31)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(C__


        HW/16/Point.h
        HW/16/Figure.h
        HW/16/Rectangle.h
        HW/16/Rectangle.cpp
        HW/16/Triangle.h
        HW/16/Triangle.cpp
        HW/16/Polygon.h
        HW/16/Polygon.cpp
        HW/16/Pentagon.cpp
        HW/16/Pentagon.h
        HW/16/main.cpp


)
