cmake_minimum_required(VERSION 3.31)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(C__

        Labparabola/Lab17/Person17.2.h
        Labparabola/Lab17/Person17.2.cpp
        Labparabola/Lab17/UniversityMember17.2.h
        Labparabola/Lab17/UniversityMember17.2.cpp
        Labparabola/Lab17/Student17.2.h
        Labparabola/Lab17/Student17.2.cpp
        Labparabola/Lab17/Teacher17.2.h
        Labparabola/Lab17/Teacher17.2.cpp
        Labparabola/Lab17/Aspirant17.2.h
        Labparabola/Lab17/Aspirant17.2.cpp
        Labparabola/Lab17/main17.2.cpp


)
